fixed horizontal scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,19 @@
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Ensure all sections are within the viewport width */
+section {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+
 .date-badge {
     font-size: var(--fs-100);
     color: rgba(255, 255, 255, 1.2);
